# onion-sec

./: .gitignore  .gitlab-ci.yml  README.md  main.py  onion-sec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/onion_sec/: __init__.py  cli.py  main.py  types.py
