[project]
name = "onion-sec"
version = "0.0.2"
authors = [
    {name = "Q Misell", email = "q@as207960.net"}
]
license = {text = "MIT"}
dependencies = [
    "requests[socks]",
    "PySocks",
    "sslyze @ https://github.com/TheEnbyperor/sslyze/archive/refs/heads/release.zip",
    "stem==1.8.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["onion_sec"]

[tool.setuptools]
zip-safe = false
package-dir = {"" = "src"}